--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script type="text/javascript" src="./main.js"></script>
 
 <head>
   <title>Lab Assignment</title>
@@ -17,21 +18,32 @@
 
     .app-container-grid {
       display: grid;
-      grid-template-columns: 1fr 6fr 2fr;
+      /* grid-template-columns: 1fr 6fr 2fr; */
       grid-template-rows: 1fr 7fr 1fr;
       height: 100vh;
     }
 
     .main-header, .main-footer {
       background-color: #9d9b9b;
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr
     }
     .main-header, .main-container-grid, .main-footer {
-      grid-column: 1 / 4;
+      /* grid-column: 1 / 4; */
     }
 
     .main-container-grid {
-      align-self:center;
+      display: grid;
+      grid-template-columns: 1fr 6fr 1fr;
+    }
+
+    .align-center {
       justify-self: center;
+      align-self: center;
+    }
+
+    .align-content {
+      align-content: baseline;
     }
   </style>
 </head>
@@ -39,13 +51,20 @@
 <body>
   <div class="app-container-grid">
     <header class="main-header">
-      <span>LOGO</span>
+      <span class="align-center">r1c1</span>
+      <div id="banner" class="align-center" onmouseenter="greeter.showGreeting()" onmouseleave="greeter.hideGreeting()">r1c2</div>
+      <div class="align-center">r1c3</div>
     </header>
-    <div class="main-container-grid">
-      middle
+    <div class="main-container-grid align-content">
+      <div class="align-center">r2c1</div>
+      <div class="align-center">r2c2
+      </div>
+      <div class="align-center">r3c3</div>
     </div>
     <footer class="main-footer">
-      footer text
+      <div class="align-center">r3c1</div>
+      <div class="align-center">r3c2</div>
+      <div class="align-center">r4c4</div>
     </footer>
     
   </div>
